fix mode buttons text wrap

--- a/src/components/stylesheets/TimeDisplay.css
+++ b/src/components/stylesheets/TimeDisplay.css
@@ -73,6 +73,7 @@ input[type='range']:disabled {
     gap: 1em;
     margin-top: 2em;
     margin-bottom: 1.3em;
+    white-space: nowrap;
 }
 
 .mode-buttons>button {
